# scentSpot

./: .gitignore  Makefile  data.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
logapp/: admin.py  models.py  views.py
logapp/migrations/: 0001_initial.py  0002_usagelog_gender.py  0003_perfume_image_url.py  0004_user_auth_user_alter_usagelog_gender.py
logapp/static/js/: alerts.js  perfume-image-updater.js
logapp/templates/: base.html  home.html  login.html  logs.html  perfume_management.html  perfume_modals.html  record_usage.html  register.html  today.html
logapp/templates/components/: footer.html  navbar.html
